// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders 1`] = `
<span
  className="badge"
>
  4
</span>
`;

exports[`<Badge /> should output a badge with the className of \`badge new\` and 1`] = `
<span
  className="badge new"
>
  3
</span>
`;

exports[`<Badge /> should output a badge with the className of \`badge\` 1`] = `
<span
  className="badge"
>
  4
</span>
`;
